--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --color-primary-variant: var(--color-gray);
     --color-accent: var(--color-blue);
     --color-accent-variant: var(--color-orange);
-    --color-text:var(--color-white);
+    --color-text: var(--color-white);
 
     /* colors */
     --color-white: #ffffff;
@@ -22,6 +22,7 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
 }
 
 h1,h2,h3,p,ul{
@@ -46,4 +47,51 @@ button{
 
 button:focus{
     outline: 1px solid var(--color-accent);
+}
+
+/* header */
+.header{
+    background: rgb(18, 90, 172);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
+
+.header__logo{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.header__logo__img{
+    width: 36px;
+    height: 36px;
+}
+
+
+
+.header__logo__title{
+    font-size: 1.8rem;
+}
+
+.header__menu{
+    display: flex;
+    gap: 4px;
+}
+
+.header__menu__item{
+    padding: 8px 16px;
+}
+
+.header__menu__item:hover{
+    border-bottom: 1px solid var(--color-accent);
+}
+
+.header__menu__item.active{
+    border: 1px solid var(--color-accent);
+    border-radius: 4px;
 }
