--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,51 @@ button:focus{
     border: 1px solid var(--color-accent);
     border-radius: 4px;
 }
+
+
+/* home */
+#home{
+    background: var(--color-primary);
+    color: var(--color-text);
+    padding: 5rem 1rem;
+    padding-top: 7rem;
+    text-align: center;
+}
+
+.home__avatar{
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border: 3px solid var(--color-accent);
+    border-radius: 100%;
+}
+
+.home__title{
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.home__title--strong{
+    color: var(--color-accent);
+}
+
+.home__description{
+    font-size: 1.3rem;
+}
+
+.home__contact{
+    display: inline-block;
+    background-color: var(--color-accent);
+    padding: 0.5rem 1rem;
+    margin: 2rem;
+    font-weight: bold;
+    color: var(--color-black);
+    border-radius: 4px;
+    transition: all .25s ease-in-out;
+}
+
+.home__contact:hover{
+    background-color: transparent;
+    outline: 2px solid var(--color-accent);
+    color: var(--color-text);
+}
