--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
     --color-blue: #03e8f9;
     --color-orange: #fd6413;
     --color-gray: #1b1e26;
+
+    /* size */
+    --size-max-width: 1200px;
 }
 
 
@@ -63,6 +66,11 @@ button:focus{
 .description{
     font-size: 1.5rem;
     margin: 0.5rem 0;
+}
+
+.max-container{
+    max-width: var(--size-max-width);
+    margin: auto;
 }
 
 /* header */
@@ -158,4 +166,59 @@ button:focus{
     background-color: transparent;
     outline: 2px solid var(--color-accent);
     color: var(--color-text);
+}
+
+/* about */
+.majors{
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    margin: 2.5rem 0;
+}
+
+.major{
+    background-color: var(--color-primary-variant);
+    padding: 2rem 1rem;
+    color: var(--color-text);
+    border-radius: 1rem;
+    cursor: default;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+}
+
+.major__icon{
+    font-size: 4rem;
+    margin: 1rem 0;
+    color: var(--color-accent);
+    transition: all .3s ease;
+}
+
+.major__title{
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.major:hover .major__icon{
+    transform: rotate(-15deg) scale(1.2);
+}
+
+.jobs{
+    text-align: start;
+}
+
+.job{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 1rem;
+}
+
+.job__name{
+    color: var(--color-primary);
+}
+
+.job__period{
+    color: var(--color-primary);
+    font-size: 0.8rem;
+
 }
