--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ button:focus{
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    z-index: 1;
 }
 
 .header__logo{
@@ -200,6 +201,7 @@ button:focus{
 
 .major:hover .major__icon{
     transform: rotate(-15deg) scale(1.2);
+    color: var(--color-orange);
 }
 
 .jobs{
@@ -279,4 +281,58 @@ button:focus{
 .bar__value{
     height: 3px;
     background-color: var(--color-accent);
+}
+
+.skills__tools li,
+.skills__etc li{
+    padding: 1rem 0;
+}
+
+/* work */
+#work{
+    background-color: var(--color-primary);
+    color: var(--color-text);
+}
+
+.categories{
+    display: flex;
+    justify-content: center;
+    margin: 2.5rem;
+    gap: 1rem;
+}
+
+.category{
+    color: var(--color-text);
+    font-size: 1.1rem;
+    padding: 0.5rem 3rem;
+    border-radius: 4px;
+    border: 1px solid var(--color-accent);
+    cursor: pointer;
+    position: relative;
+    white-space: nowrap;
+}
+
+.category--selected{
+    background-color: var(--color-accent);
+    color: var(--color-primary);
+}
+
+.category__count{
+    position: absolute;
+    top: -20px;
+    right: 16px;
+    width: 28px;
+    height: 28px;
+    line-height: 28px;
+    border-radius: 100%;
+    background: var(--color-accent-variant);
+    color: var(--color-text);
+    opacity: 0;
+    transition: all .25s ease-in;
+}
+
+.category--selected .category__count,
+.category:hover .category__count{
+    opacity: 1;
+    top: 0;
 }
