--- a/css/style.css
+++ b/css/style.css
@@ -385,5 +385,40 @@ button:focus{
     width: 90px;
     height: 2px;
     background-color: var(--color-accent);
+}
 
+/* testimonial */
+.testimonials{
+    margin: 3rem;
+}
+
+.testimonial{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+
+.testimonial:nth-child(even) .testimonial__img{
+    order: 1;
+}
+.testimonial__img{
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+}
+
+.testimonial__bubble{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+
+.testimonial__bubble__name{
+    color: var(--color-accent);
+    font-weight: bold;
+    filter: brightness(70%);
 }
