--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 
 *{
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -421,4 +422,129 @@ button:focus{
     color: var(--color-accent);
     font-weight: bold;
     filter: brightness(70%);
+}
+
+
+/* arrow up */
+.arrow-up{
+    background-color: var(--color-primary);
+    position: fixed;
+    bottom: 3rem;
+    right: 3rem;
+    font-size: 3rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 100%;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+}
+
+
+
+
+/* footer */
+#contact{
+    background-color: var(--color-primary);
+    color: var(--color-text);
+}
+
+.contact__links{
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+    font-size: 2rem;
+
+}
+
+.contact__link{
+    transition: color .25s ease-in;
+}
+.contact__link:hover{
+    color: var(--color-accent);
+}
+
+@media screen and (max-width: 768px){
+  .section{
+    padding: 3rem 2rem;
+  }
+
+  .title{
+    font-size: 2rem;
+  }
+
+  .description{
+    font-size: 1rem;
+  }
+
+  .header{
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .header__menu{
+    flex-direction: column;
+    text-align: center;
+    padding: 1rem 4rem;
+    gap: 1rem;
+  }
+
+  .header__nav{
+    width: 100%;
+  }
+
+
+  #home{
+    padding-bottom: 3rem;
+  }
+
+  .home__title{
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .majors{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .major{
+    max-width: 25rem;
+  }
+
+  .job{
+    justify-content: center;
+  }
+
+  .skills{
+    grid-template-columns: 1fr;
+  }
+
+  .categories{
+    flex-direction: column;
+  }
+
+  .category{
+    width: 100%;
+  }
+
+  .projects{
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .testimonial{
+    flex-direction: column;
+  }
+
+  .testimonial:nth-child(even) .testimonial__img{
+    order: 0;
+  }
+
+  .arrow-up{
+    width: 3rem;
+    height: 3rem;
+    font-size: 2rem;
+    bottom: 1.5rem;
+    right: 1.5rem;
+  }
 }
