--- a/css/style.css
+++ b/css/style.css
@@ -442,11 +442,12 @@ button:focus{
     height: 4.5rem;
     border-radius: 100%;
     text-align: center;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    box-shadow: 5px 5px 0px 0px var(--color-accent);
 }
 
-
-
+.aside{
+    transition: all .35s ease;
+}
 
 /* footer */
 #contact{
