--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,12 @@ button:focus{
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 2, 1fr;
     gap:1rem;
+    transition: all 250ms ease-out;
+}
+
+.projects.anim-out{
+    opacity: 0;
+    transform: scale(0.96) translateY(20px);
 }
 
 .project{
@@ -368,6 +374,8 @@ button:focus{
     border-radius: 8px;
     overflow: hidden;
 }
+
+
 
 .project__img{
     width: 100%;
